# my-openenv

./: .gitignore  Dockerfile  LICENSE.txt  README.md  check_scores.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_LLM.py  validate.py
docs/: README.md  SETUP.md
examples/: test_agent.py
server/: app.py
src/: environment.py  graders.py  inference.py  main.py  models.py  tasks.py
src/data_cleaning_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/openenv_dc/: environment.py  graders.py  submission.md
